@startuml
skinparam ClassAttributeIconSize 0

class GUI_JUZGADO
class Expediente
class Autor
class Victima{
    -nombre: String
    -edad: int
    -numExp: String
    -dano_fisicos: String
    -dano_morales: String
    -dano_psiquicos: String
    -dano_materiales: String

    +Victima(String dano_fisicos, String dano_morales, String dano_psiquicos, String dano_materiales, String nombre, int edad, String numExp)
    +setNombre(nombre: String): void
    +getNombre(): String
    +getNumExp(): String
}

class Hecho{
    -horario: String
    -influencia_drogas: String
    -lugar: String
    -medios_empleados: String
    -planificacion: String
    -numExp: String

    +Hecho(String horario, String influencia_drogas, String lugar, String medios_empleados, String planificacion, String numExp)
    +getNumExp(): String
}

abstract class Circunstancia
class Agravante
class Atenuante
interface Serializable

Circunstancia <|-- Agravante
Circunstancia <|-- Atenuante
Expediente "1" *-- "0...*" Circunstancia
Expediente "1" *-- "1" Autor
Expediente "1" *-- "1" Victima
Expediente "1" *-- "1" Hecho
GUI_JUZGADO "1" *-- "0...*" Expediente
Hecho "1" *--* "1" Autor
Victima "1" *--* "1" Autor
Victima "1" *--* "1" Hecho
Circunstancia "1" *--* "1" Autor
Circunstancia "1" *--* "1" Victima
Circunstancia "1" *--* "1" Hecho
Expediente <.. Serializable
Autor <.. Serializable
Victima <.. Serializable
Hecho <.. Serializable
Agravante <.. Serializable
Atenuante <.. Serializable


@enduml